k8s/backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: backend
  labels:
    app: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      namespace: demo
      labels:
        app: backend
    spec:
      containers:
      - name: flask-backend
        image: creditesprit.azurecr.io/credit/backend:latest
        #imagePullPolicy: Never
        ports: 
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: flask-service
  labels:
    app: backend
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
