k8s/database.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo
  name: postgres
  labels:
    app: database

spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      namespace: demo
      labels:
        app: database
    spec:
      containers:
      - name: postgres
        image: creditesprit.azurecr.io/credit/fullstackappdb:latest
        ports: 
        - containerPort: 5432
        volumeMounts:
        - name: sqlscript
          mountPath: /docker-entrypoint-initdb.d
      volumes:
        - name: sqlscript
          configMap:
            name: pg-init-script
---
apiVersion: v1
kind: Service
metadata:
  namespace: demo
  name: pg-service
  labels:
    app: database
spec:
  type: ClusterIP
  selector:
    app: database
  ports:
  - port: 5432
